Name "Schritt" to "Zeile"

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -99,7 +99,8 @@
   },
   "instructionPicker": {
     "title": "Anweisung hinzufügen",
-    "addMove": "Schritt hinzufügen",
+    "addMove": "Zeile",
+    "addSubroutine": "Unterprogramm",
     "move": {
       "title": "Bewegen",
       "description": "Linke und rechte Motorgeschwindigkeit steuern"
