--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -99,7 +99,8 @@
   },
   "instructionPicker": {
     "title": "Add Instruction",
-    "addMove": "Add Move",
+    "addMove": "Move",
+    "addSubroutine": "Subroutine",
     "move": {
       "title": "Move",
       "description": "Control left and right motor speeds"
@@ -217,6 +218,7 @@
   },
   "statementOptionsMenu": {
     "title": "Instruction Options",
+    "changeProgram": "Change program",
     "insertBefore": "Insert before",
     "insertAfter": "Insert after",
     "moveUp": "Move up",
